--- a/src/scss/components/_queries.scss
+++ b/src/scss/components/_queries.scss
@@ -4,6 +4,7 @@
   header {
     min-width: 100%;
     background-color: rgba($color: #000000, $alpha: 0.5);
+   
     nav {
       min-width: 100%;
       position: relative;
@@ -11,11 +12,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      z-index: 999;
 
       .logo {
         width: 100%;
-        z-index: 30;
-
+        z-index: 10;
         img {
           padding-left: 3rem;
           width: clamp(8rem, 25vw, 20rem);
@@ -73,6 +74,9 @@
       img {
         width: clamp(5rem, 40vw, 15rem);
       }
+    }
+    #mangrove-snapper{
+      z-index: -1;
     }
     #videos {
       .videos {
