--- a/src/scss/sections/_container.scss
+++ b/src/scss/sections/_container.scss
@@ -13,6 +13,7 @@
     background: url("../images/scroll.jpg") no-repeat center center / cover;
     text-align: center;
     text-wrap: balance;
+    z-index:-1;
 
     h1,
     p {
